syntax = "proto3";
package book;
option go_package = "github.com/dedidot/grpc-book-server-streaming/proto";

message Book {
  string id = 1;
  string title = 2;
  string author = 3;
  bool is_read = 4;
}

message GetBookRequest {

}

message GetBookResponse {
  bool status = 1;
  Book Data = 2;
}

service BookService {
  rpc GetBookData (GetBookRequest) returns (stream GetBookResponse);
}